--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@google-cloud/vision": "^1.1.2",
     "jest": "^24.8.0",
     "node-fetch": "^2.6.0"
   },
